--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "npx prisma generate && nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "NODE_ENV=production node dist/main",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=production node dist/main",
+    "format": "bun run prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "NODE_ENV=production bun run dist/main.js",
+    "start:dev": "bun --watch ./src/main.ts",
+    "start:debug": "bun run --inspect src/main.ts",
+    "start:prod": "NODE_ENV=production bun run dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
