--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.2",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "6.6.0",
     "@react-email/components": "^0.0.19",
     "@react-email/render": "^0.0.15",
     "@types/hogan.js": "^3.0.5",
     "hogan.js": "^3.0.2",
+    "nestjs-telegraf": "^2.8.1",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.0",
     "resend": "^3.2.0",
     "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "6.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
