--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
-  "dependencies": {
-    "hono": "^4.8.5"
+  "name": "porkast-svc",
+  "version": "0.1.0",
+  "bin": {
+    "porkast-svc": "bin/porkast-svc.js"
+  },
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
   "devDependencies": {
-    "esbuild": "^0.25.6"
+    "@types/jest": "^29.5.14",
+    "@types/node": "22.7.9",
+    "aws-cdk": "2.1020.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.3"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-events": "^1.204.0",
+    "@aws-cdk/aws-events-targets": "^1.204.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
+    "aws-cdk-lib": "^2.202.0",
+    "aws-lambda": "^1.0.7",
+    "constructs": "^10.0.0"
   }
 }
