--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "porkast-svc": "bin/porkast-svc.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "npx prisma generate && tsc",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
@@ -15,6 +15,7 @@
     "@types/node": "22.7.9",
     "aws-cdk": "2.1020.2",
     "jest": "^29.7.0",
+    "prisma": "^6.12.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
@@ -23,6 +24,7 @@
     "@aws-cdk/aws-events": "^1.204.0",
     "@aws-cdk/aws-events-targets": "^1.204.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
+    "@prisma/client": "^6.12.0",
     "aws-cdk-lib": "^2.202.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0"
