--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@types/react": "^19.1.8",
     "aws-cdk": "2.1020.2",
     "jest": "^29.7.0",
     "prisma": "^6.12.0",
@@ -25,9 +26,12 @@
     "@aws-cdk/aws-events-targets": "^1.204.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
     "@prisma/client": "^6.12.0",
+    "@types/hogan.js": "^3.0.5",
     "aws-cdk-lib": "^2.202.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "hogan.js": "^3.0.2",
+    "resend": "^4.7.0",
     "uuid": "^11.1.0"
   }
 }
