--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "porkast-svc",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "start": "bun run src/index.ts"
+    "start": "NODE_ENV=production bun run src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
