--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "cronbake": "^0.1.2",
     "hogan.js": "^3.0.2",
     "hono": "^4.8.9",
+    "marked": "^16.1.1",
     "prisma": "^6.12.0",
     "resend": "^4.7.0",
     "telegraf": "^4.16.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/marked": "^6.0.0"
   }
 }
