--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "NODE_ENV=production bun run src/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.2",
     "@prisma/client": "^6.12.0",
     "@types/hogan.js": "^3.0.5",
     "cronbake": "^0.1.2",
@@ -13,10 +14,12 @@
     "marked": "^16.1.1",
     "prisma": "^6.12.0",
     "resend": "^4.7.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/jest": "^30.0.0",
     "@types/marked": "^6.0.0"
   }
 }
