--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "hogan.js": "^3.0.2",
     "hono": "^4.8.9",
     "marked": "^16.1.1",
+    "podcast": "^2.0.1",
     "prisma": "^6.12.0",
     "resend": "^4.7.0",
+    "rss-parser": "^3.13.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
